datapower-services/dp-demo/manifests/service-template.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: datapower
    app.kubernetes.io/instance: datapower-operator-dpservice
    app.kubernetes.io/managed-by: datapower-operator
    app.kubernetes.io/name: datapower
    app.kubernetes.io/version: 10.0.0.0
  name: dp-demo-service
spec:
  ports:
# Admin port 9090 is exposed as service
  - name: dp-admin
    port: 9090
    protocol: TCP
    targetPort: 9090
# App port 6443 is exposed as service
  - name: app-https
    port: 6443
    protocol: TCP
    targetPort: 6443
  selector:
    app.kubernetes.io/instance: PARM_DATAPOWER_INSTANCE_NAME
    app.kubernetes.io/name: datapower
  type: NodePort
