datapower-services/dp-demo/manifests/admin-route-template.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dp-admin
spec:
  host: >-
    PARM_DP_ADMIN_HOST_NAME
  to:
    kind: Service
    name: dp-demo-service
    weight: 100
  port:
    targetPort: dp-admin
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
