datapower-services/dp-demo/manifests/app-route-template.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dp-demo
spec:
  host: >-
    PARM_DP_DEMO_HOST_NAME
  to:
    kind: Service
    name: dp-demo-service
    weight: 100
  port:
    targetPort: app-https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
